--- a/packages/ui/src/components/Badge.astro
+++ b/packages/ui/src/components/Badge.astro
@@ -52,7 +52,7 @@
 
 import type { HTMLTag, Polymorphic } from "astro/types";
 import { cva } from "class-variance-authority";
-import { cn } from "../lib/utils";
+import { cn } from "@bejamas/ui/lib/utils";
 
 type Props<Tag extends HTMLTag> = Polymorphic<{
   as: Tag;
