--- a/packages/ui/src/components/Footer.astro
+++ b/packages/ui/src/components/Footer.astro
@@ -52,7 +52,7 @@
  *
  */
 
-import { cn } from "../lib/utils";
+import { cn } from "@bejamas/ui/lib/utils";
 
 const { class: className = "", ...props } = Astro.props;
 ---
