--- a/packages/ui/src/components/Marquee.astro
+++ b/packages/ui/src/components/Marquee.astro
@@ -50,7 +50,7 @@
  */
 
 import { cva } from "class-variance-authority";
-import { cn } from "../lib/utils";
+import { cn } from "@bejamas/ui/lib/utils";
 
 interface Props {
   direction?: "left" | "right" | "top" | "bottom";
