--- a/packages/ui/src/components/Select.astro
+++ b/packages/ui/src/components/Select.astro
@@ -21,7 +21,7 @@
 import { ChevronDown } from "@lucide/astro";
 import type { HTMLAttributes } from "astro/types";
 import { cva } from "class-variance-authority";
-import { cn } from "../lib/utils";
+import { cn } from "@bejamas/ui/lib/utils";
 
 interface Props extends HTMLAttributes<"select"> {
   variant?: "default" | "ghost" | "neutral";
