--- a/packages/ui/src/components/Button.astro
+++ b/packages/ui/src/components/Button.astro
@@ -110,7 +110,7 @@
 
 import type { HTMLTag, Polymorphic } from "astro/types";
 import { cva } from "class-variance-authority";
-import { cn } from "../lib/utils";
+import { cn } from "@bejamas/ui/lib/utils";
 
 type Props = {
   as?: HTMLTag;
