--- a/packages/ui/src/components/Card.astro
+++ b/packages/ui/src/components/Card.astro
@@ -122,7 +122,7 @@
  */
 
 import { cva } from "class-variance-authority";
-import { cn } from "../lib/utils";
+import { cn } from "@bejamas/ui/lib/utils";
 const { variant = "default", class: className = "" } = Astro.props;
 
 const cardVariants = cva(
