--- a/templates/astro/src/ui/Button.astro
+++ b/templates/astro/src/ui/Button.astro
@@ -3,27 +3,17 @@
  * @component Button
  * @title Button
  * @description Displays a button or a component that looks like a button.
- * @status stable
- * @since 0.1.0
  *
  * @example
  *
- * <Button>Click me</Button>
- *
- * @props
- * - as?: "button" | "a" | "div" | "span" — Element to render. Default: "button"
- * - className?: string — If set, adds a class to the component.
- * - variant?: "default" | "destructive" | "outline" | "secondary" | "ghost" | "link" — Sets style. Default: "default"
- * - size?: "default" | "sm" | "lg" | "icon" — Sets size. Default: "default"
- *
- * @a11y
- * - Uses focus-visible outline
- * - Honors prefers-reduced-motion
- *
+ * <div class="flex flex-wrap items-center gap-2 md:flex-row">
+ *   <Button>Button</Button>
+ *   <Button variant="outline" size="icon" aria-label="Submit">
+ *     <ArrowUpIcon />
+ *   </Button>
+ * </div>
  *
  * @usage
- *
- * ## Usage
  *
  * ```astro
  * ---
@@ -39,20 +29,52 @@
  * You can use the `as` prop to render the component as an anchor.
  *
  * ```astro
+ * ---
  * import Button from '@/ui/components/Button.astro';
+ * ---
  *
  * <Button as="a" href="https://bejamas.com">Click me</Button>
  * ```
  *
  * @examples
  *
+ * ### Variants
+ *
+ * <div class="flex gap-3 items-center">
+ *   <Button variant="default">Default</Button>
+ *   <Button variant="secondary">Secondary</Button>
+ *   <Button variant="outline">Outline</Button>
+ *   <Button variant="ghost">Ghost</Button>
+ *   <Button variant="destructive">Destructive</Button>
+ * </div>
+ *
  * ### Sizes
  *
- * <div class="flex gap-2 items-center">
- *   <Button variant="default" size="sm">Click me</Button>
- *   <Button variant="default">Click me</Button>
- *   <Button variant="default" size="lg">Click me</Button>
+ * <div class="flex flex-col items-start gap-8 sm:flex-row">
+ *   <div class="flex items-start gap-2">
+ *     <Button size="sm" variant="outline">
+ *       Small
+ *     </Button>
+ *     <Button size="icon-sm" aria-label="Submit" variant="outline">
+ *       <ArrowUpRightIcon />
+ *     </Button>
+ *   </div>
+ *   <div class="flex items-start gap-2">
+ *     <Button variant="outline">Default</Button>
+ *     <Button size="icon" aria-label="Submit" variant="outline">
+ *       <ArrowUpRightIcon />
+ *     </Button>
+ *   </div>
+ *   <div class="flex items-start gap-2">
+ *     <Button variant="outline" size="lg">
+ *       Large
+ *     </Button>
+ *     <Button size="icon-lg" aria-label="Submit" variant="outline">
+ *       <ArrowUpRightIcon />
+ *     </Button>
+ *   </div>
  * </div>
+ *
  * ### With badge
  *
  * <Button variant="default">
@@ -90,8 +112,8 @@ import type { HTMLTag, Polymorphic } from "astro/types";
 import { cva } from "class-variance-authority";
 import { cn } from "@/lib/utils";
 
-type Props<Tag extends HTMLTag> = Polymorphic<{
-  as: Tag;
+type Props = {
+  as?: HTMLTag;
   variant?:
     | "default"
     | "destructive"
@@ -99,20 +121,19 @@ type Props<Tag extends HTMLTag> = Polymorphic<{
     | "secondary"
     | "ghost"
     | "link";
-  class?: string;
   size?: "default" | "sm" | "lg" | "icon";
-}>;
+};
 
 const {
-  as = "button",
+  as: Tag = "button",
   variant = "default",
   size = "default",
   class: className = "",
   ...props
-} = Astro.props as Props<typeof as>;
+} = Astro.props as Props;
 
 const buttonVariants = cva(
-  "inline-flex ease-in-out border-border items-center justify-center gap-2 whitespace-nowrap rounded-lg font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive active:scale-98",
+  "inline-flex ease-out duration-150 border-border items-center justify-center gap-2 whitespace-nowrap rounded-lg font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive active:scale-98",
   {
     variants: {
       variant: {
@@ -123,17 +144,18 @@ const buttonVariants = cva(
         outline:
           "border shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50",
         secondary:
-          "bg-secondary shadow-xs text-secondary-foreground hover:bg-secondary/80",
+          "bg-secondary text-secondary-foreground hover:bg-secondary/80",
         ghost:
           "hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50",
         link: "text-accent-foreground underline-offset-4 hover:underline p-0",
       },
       size: {
-        default:
-          "h-9.5 px-3 py-2 has-[>svg]:px-3 text-sm has-[.badge:last-child]:pr-1.5 has-[.badge:first-child]:pl-1.5",
-        sm: "h-8.5 text-xs rounded-lg gap-1.5 px-3 has-[>svg]:px-2.5",
+        default: "h-9 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 ",
+        sm: "h-8.5 text-xs rounded-lg gap-1.5 px-3.5 has-[>svg]:px-2.5",
         lg: "h-10 text-sm rounded-lg px-4 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
-        icon: "size-9.5",
+        icon: "size-9",
+        "icon-sm": "size-8.5",
+        "icon-lg": "size-10",
       },
     },
     defaultVariants: {
@@ -142,8 +164,6 @@ const buttonVariants = cva(
     },
   },
 );
-
-const Tag = as;
 ---
 
 <Tag class={cn(buttonVariants({ variant, size, className }))} {...props}>
