--- a/apps/web/src/pages/ai.astro
+++ b/apps/web/src/pages/ai.astro
@@ -8,9 +8,98 @@ import Breadcrumbs from "@bejamas/ui/components/Breadcrumbs.astro";
 import { SlashIcon } from "@lucide/astro";
 ---
 
-<BlockExampleLayout>
-  <img
-    src="/demo/dcaf6fd7d219ef3692f5699c125016f5f62d1d48.png"
-    class="w-full h-full object-contain"
-  />
+<BlockExampleLayout theme="t3-chat">
+  <StickySurface
+    observeStuck
+    class="[&.is-stuck]:shadow-[0_1px_0_0_rgb(0_0_0_/_0.16)] bg-background"
+  >
+    <NavigationMenu class="max-w-[1600px] mx-auto">
+      <div slot="logo" class="col-span-6">
+        <a
+          href="/"
+          class="text-4xl inline-block scale-400 duration-150 origin-top-left group-[.is-stuck]/surface:scale-100 transition-transform ease-in-out font-extrabold tracking-tighter"
+        >
+          VIRA
+        </a>
+      </div>
+      <ul slot="links" class="flex -ml-4 col-span-4 items-center space-x-2">
+        <li>
+          <Button as="a" href="/" variant="link" class="text-base"
+            >Developers</Button
+          >
+        </li>
+        <li>
+          <Button as="a" href="/" variant="link" class="text-base"
+            >Business</Button
+          >
+        </li>
+        <li>
+          <Button as="a" href="/" variant="link" class="text-base"
+            >Resources</Button
+          >
+        </li>
+        <li>
+          <Button as="a" href="/" variant="link" class="text-base"
+            >Pricing</Button
+          >
+        </li>
+        <li>
+          <Button as="a" href="/" variant="link" class="text-base"
+            >Contact</Button
+          >
+        </li>
+      </ul>
+      <div
+        slot="actions"
+        class="flex col-span-2 justify-end items-center gap-2"
+      >
+        <Button
+          variant="secondary"
+          class="group-[.is-stuck]/surface:bg-primary group-[.is-stuck]/surface:text-primary-foreground text-base font-semibold"
+          >Get Started</Button
+        >
+        <!-- <Button
+        class="w-20 group-[.is-stuck]/surface:w-25 duration-500 ease-out"
+      >
+        <span
+          class="group-[.is-stuck]/surface:blur-sm group-[.is-stuck]/surface:opacity-0 absolute group-[.is-stuck]/surface:hidden transition-discrete duration-500 ease-out"
+          >Contact</span
+        >
+        <span
+          class="group-[.is-stuck]/surface:blur-none group-[.is-stuck]/surface:opacity-100 group-[.is-stuck]/surface:delay-150 group-[.is-stuck]/surface:block opacity-0 transition-all hidden blur-sm transition-discrete duration-500 ease-out"
+          >Get a demo</span
+        >
+      </Button> -->
+      </div>
+    </NavigationMenu>
+  </StickySurface>
+
+  <div class="max-w-[1600px] mx-auto py-20 grid grid-cols-12">
+    <div class="col-span-6 col-start-7">
+      <h1 class="text-3xl tracking-tighter max-w-sm">
+        Make your crypto move with us Want to get the best prices in DeFi right
+        now?
+      </h1>
+    </div>
+  </div>
+
+  <div class="relative">
+    <img
+      src="/demo/ce1eef98818713195a5a8fbd1428cd3a9ba2baa9.png"
+      class="object-contain absolute left-0 z-30 h-full w-auto"
+    />
+    <img
+      src="/demo/ce1eef98818713195a5a8fbd1428cd3a9ba2baa9.png"
+      class="w-auto h-full object-contain absolute z-20 left-1/4"
+    />
+    <img
+      src="/demo/5da428d9994d1e1aa4dbc7149569a331e2b4cc0c.png"
+      class="w-1/2 h-full object-contain left-1/2 relative"
+    />
+    <div
+      class="absolute max-w-md bottom-50 z-30 left-1/2 w-full text-white text-4xl font-medium"
+    >
+      <h2>A predictive, presonalised trading platform</h2>
+    </div>
+  </div>
 </BlockExampleLayout>
