--- a/packages/starlight-theme-bejamas/src/styles/theme.css
+++ b/packages/starlight-theme-bejamas/src/styles/theme.css
@@ -44,6 +44,9 @@
 
     --sl-color-text-accent: var(--primary);
     --sl-color-accent: var(--primary);
+
+    --sl-nav-height: auto;
+    --sl-nav-pad-y: calc(var(--spacing) * 4);
   }
 }
 
